# QtQuickVcp

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  AppDiscover.pro  CMakeLists.txt  JDnsConfig.cmake.in  JDnsConfigVersion.cmake.in  Knobs.desktop  Knobs.pro  Knobs_harmattan.desktop  LICENSE  MachinekitClient.pro  QJDNSConfig.cmake.in  QJDNSConfigVersion.cmake.in  QJDnsConfig.cmake.in  QtQuickVcp.pro  README.md  SplashScreen.qml  appveyor.yml  arcstyle.cpp  arcstyle.h  cmake_uninstall.cmake.in  init.qml  jdns.pc.in  jdns.pri  jdns_sys.c  main.cpp  main.qml  meter.cpp  meter.h  needlestyle.cpp  needlestyle.h  package.sh  paths.pri  piestyle.cpp  piestyle.h  protobuf.pri  qjdns.pc.in  qml.qrc  (+3 more)
src/: .directory  CMakeLists.txt  deployment.pri  jdns_mdnsd.h  main.cpp  nzmqt_app.pro  plugin.pri  protobuf.pri  qjdns.cpp  qjdns.h  qjdns_export.h  qjdns_p.h  src.pro  translation.pri  zeromq.pri  zmqproto.pri
src/application/: ApplicationAction.qml  ApplicationCore.qml  ApplicationHelper.qml  ApplicationItem.qml  ApplicationObject.qml  ApplicationSettings.qml  HomeAllAxesHelper.qml  MdiHistory.qml  QueuedConnection.qml  application.pro  application.qrc  applicationcommand.cpp  applicationcommand.h  applicationconfig.cpp  applicationconfig.h  applicationconfigfilter.cpp  applicationconfigfilter.h  applicationconfigitem.cpp  applicationconfigitem.h  applicationdescription.cpp  applicationdescription.h  applicationerror.cpp  applicationerror.h  applicationfile.cpp  applicationfile.h  applicationfile2.cpp  applicationfile2.h  applicationfileitem.cpp  applicationfileitem.h  applicationfilemodel.cpp  applicationfilemodel.h  applicationfilesynchandler.cpp  applicationfilesynchandler.h  applicationhelpers.cpp  applicationhelpers.h  applicationlauncher.cpp  applicationlauncher.h  applicationlog.cpp  applicationlog.h  applicationlogmessage.cpp  (+49 more)
src/applicationcontrols/: AbstractDigitalReadOut.qml  ApplicationFileDialog.qml  ApplicationNotifications.qml  ApplicationProgressBar.qml  ApplicationRemoteFileDialog.qml  AxisComboBox.qml  AxisRadioGroup.qml  BlockDeleteAction.qml  ConnectionWindow.qml  DecreaseSpindleSpeedAction.qml  DigitalReadOut.qml  EditProgramAction.qml  EditToolTableAction.qml  EditWithSystemEditorAction.qml  EstopAction.qml  EstopButton.qml  EstopPowerAction.qml  FeedHoldAction.qml  FeedOverrideAction.qml  FeedrateHandler.qml  FeedrateSlider.qml  FloodAction.qml  GCodeLabel.qml  HomeAxisAction.qml  IncreaseSpindleSpeedAction.qml  JogAction.qml  JogButton.qml  JogDistanceComboBox.qml  JogDistanceHandler.qml  JogStick.qml  JogVelocityHandler.qml  JogVelocitySlider.qml  MaximumVelocityHandler.qml  MaximumVelocitySlider.qml  MdiCommandAction.qml  MdiCommandEdit.qml  MdiHistoryTable.qml  MistAction.qml  OpenAction.qml  OptionalStopAction.qml  (+31 more)
src/common/: abstractserviceimplementation.cpp  abstractserviceimplementation.h  common.pri  debughelper.h  machinetalkservice.h  service.cpp  service.h
src/controls/: .directory  ColorPicker.qml  Dial.qml  Gauge.qml  Knob.qml  Led.qml  Line.qml  LogChart.qml  RoundGauge.qml  ScaleContainer.qml  SlidePage.qml  SlideView.qml  TemperatureSelector.qml  TooltipArea.qml  TouchButton.qml  ValueChart.qml  ValueModel.qml  VirtualJoystick.qml  controls.pro  controls.qrc  dummy.h  plugin.cpp  plugin.h  qmldir
src/halremote/: debughelper.h  halgroup.cpp  halgroup.h  halpin.cpp  halpin.h  halremote.pro  halremotecomponent.cpp  halremotecomponent.h  halsignal.cpp  halsignal.h  plugin.cpp  plugin.h  qappconfig.cpp  qappconfig.h  qappconfigfilter.cpp  qappconfigfilter.h  qappconfigitem.cpp  qappconfigitem.h  qappdiscovery.cpp  qappdiscovery.h  qappdiscoveryitem.cpp  qappdiscoveryitem.h  qapplicationconfig.cpp  qapplicationconfig.h  qapplicationconfigfilter.cpp  qapplicationconfigfilter.h  qapplicationconfigitem.cpp  qapplicationconfigitem.h  qapplicationdescription.h  qcomponent.cpp  qemccommand.cpp  qemccommand.h  qemcerror.cpp  qemcerror.h  qemcstatus.cpp  qemcstatus.h  qhalapplicationbase.cpp  qhalapplicationbase.h  qhalgroup.cpp  qhalgroup.h  (+16 more)
src/halremotecontrols/: .directory  ApplicationWindow.qml  Button.qml  ColorPicker.qml  ConnectionWindow.qml  DiscoveryPage.qml  Gauge.qml  HalApplication.qml  HalApplicationWindow.qml  HalButton.qml  HalCheckBox.qml  HalColorPicker.qml  HalComboBox.qml  HalContainer.qml  HalDial.qml  HalDiscoveryPage.qml  HalGauge.qml  HalKnob.qml  HalLabel.qml  HalLed.qml  HalLogChart.qml  HalProgressBar.qml  HalRadioButton.qml  HalRoundGauge.qml  HalSlider.qml  HalSpinBox.qml  HalSwitch.qml  HalToggleButton.qml  HalVirtualJoystick.qml  Led.qml  LogChart.qml  ProgressBar.qml  RadioButton.qml  Slider.qml  ToggleButton.qml  VirtualJoystick.qml  dummy.cpp  halComboBox1.qml  halComboBox2.qml  halremotecontrols.pro  (+4 more)
src/jdns/: CMakeLists.txt  jdns_mdnsd.c  jdns_p.h  jdns_packet.c  jdns_sys.c  jdns_util.c
src/launcher/: debughelper.h  launcher.pro  plugin.cpp  plugin.h  qlauncher.cpp  qlauncher.h  qmldir
src/machinetalk/: dynamicobject.cpp  dynamicobject.h  machinetalk.cpp  machinetalk.h  machinetalk.pri  machinetalk.pro  machinetalk_global.h  machinetalkservice.cpp  machinetalkservice.h
src/pathview/: BoundingBox3D.qml  ClearBackplotAction.qml  Coordinate3D.qml  FontIcon.qml  GCodeSync.qml  Grid3D.qml  LineFragmentShader.glsl  LineVertexShader.glsl  ModelFragmentShader.glsl  ModelVertexShader.glsl  PathView3D.qml  PathViewAction.qml  PathViewCore.qml  PathViewObject.qml  ProgramExtents3D.qml  ProgramOffsets3D.qml  SimpleFragment.glsl  SimpleVertex.glsl  SourceEdit.qml  SourceView.qml  TextFragmentShader.glsl  TextVertexShader.glsl  ViewModeAction.qml  ZoomInAction.qml  ZoomOriginalAction.qml  ZoomOutAction.qml  gcodeprogramitem.cpp  gcodeprogramitem.h  gcodeprogramloader.cpp  gcodeprogramloader.h  gcodeprogrammodel.cpp  gcodeprogrammodel.h  glcanvas.cpp  glcanvas.h  glcubeitem.cpp  glcubeitem.h  glcylinderitem.cpp  glcylinderitem.h  glitem.cpp  glitem.h  (+59 more)
src/qjdns/: CMakeLists.txt  jdnsshared.cpp  qjdns.cpp  qjdnsshared.cpp  qjdnsshared_p.h
src/service/: debughelper.h  nameserver.cpp  nameserver.h  plugin.cpp  plugin.h  (+26 more)
(+422 files in other folders)
